--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@
     <title>connection</title>
     <link rel="stylesheet" href="../css/formulaire.css">
 </head>
-<body>
+<body style="background: red">
     <header>
 
     </header>
