--- a/accueil.html
+++ b/accueil.html
@@ -5,11 +5,12 @@
     <title>connection</title>
     <link rel="stylesheet" href="../css/formulaire.css">
 </head>
-<body style="background: red">
+<body style="background: blue">
     <header>
 
     </header>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ab aut reiciendis esse quisquam sed ipsa laborum quas, odio natus facere maiores tenetur necessitatibus maxime praesentium cum error facilis repellendus.</p>
     <form name="formulaire" id="formulaire" action="" method="post">
         <input type="text" id="pseudo" name="pseudo" value="etale">
         <input type="submit" name="valider" id="valider">
